<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KUPID Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="action_export_calendar">Export to Calendar</string>
    <string name="action_export_text">Export as Text</string>
    <string name="action_view_original">View Original</string>
    <string name="action_read_all">Read All</string>
    <string name="action_lecture_info">Lecture Info</string>
    <string name="action_search">Search Noti</string>
    <string name="action_search_hint">Search with title and contents</string>
    <string name="tutorial_login">Log in</string>
    <string name="tutorial_description1">Get new KUPID notification immediately</string>
    <string name="tutorial_description2">Get your new notice with few clicks</string>
    <string name="tutorial_description3">You don\'t need yo login for the information</string>
    <string name="tutorial_description4">Your Account information stores securly</string>
    <string name="tutorial_description5">Don\'t forget your assignment for your course</string>
    <string name="login_login">Log in</string>
    <string name="login_hint_id">Your KUPID ID</string>
    <string name="login_hint_pw">Your Password</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="exception_msg_no_such_user">Please type id and password</string>
    <string name="exception_msg_invalid_password">Please type id and password</string>
    <string name="dialog_messagae_read_all_title">Read all notification?</string>
    <string name="dialog_messagae_read_all_message">Do you want to mark all notificaions to read of this category?</string>
    <string name="category_header_common">Common Notification</string>
    <string name="category_header_subject">Subject Notification</string>
    <string name="subject_notice_desc">Notice on KUPID</string>
    <string name="subject_schedule_desc">College schedule for Korea University Students</string>
    <string name="subject_hci_desc">CNCE402 Tue(2) Woodang 606 목(2) Woodang 606</string>
    <string name="subject_probability_desc">Probability and statistics</string>
    <string name="subject_history_desc">How history descripted</string>
    <string name="subject_face_action_desc">Human face and action</string>
    <string name="subject_algorithm_desc">Algorithm</string>
    <string name="subject_ip_desc">Internet Protocol</string>
    <string name="setting_alarm">Alarm</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_vibration">Vibration</string>
    <string name="setting_detail">Detail</string>
    <string name="setting_notice">Notice</string>
    <string name="setting_schedule">College schedule</string>
    <string name="setting_account">Account</string>
    <string name="setting_logout">Log out</string>
    <string name="setting_logout_message">Do you really want to log out?</string>
    <string name="setting_detail_title">Detail settings</string>
    <string name="setting_filtering">Filtering</string>
    <string name="setting_advance">Advanced settings</string>
    <string name="subject_hci">Human Computer Interaction</string>
    <string name="subject_probability">Probability and statistics</string>
    <string name="subject_history">How history descripted</string>
    <string name="subject_face_action">Human face and action</string>
    <string name="subject_algorithm">Algorithm</string>
    <string name="subject_ip">Internet Protocol</string>
    <string name="dummy">Hello World!</string>
    <string name="setting_notice_desc">New Notifications</string>
    <string name="setting_schedule_desc">New Schedules</string>
    <string name="setting_hci_desc">Detail settings of subject</string>
    <string name="setting_probability_desc">Detail settings of subject</string>
    <string name="setting_history_desc">Detail settings of subject</string>
    <string name="setting_sound_desc">Play sound when receive new notification.</string>
    <string name="setting_vibration_desc">Vibrate when receive new notification.</string>
    <string name="setting_logout_desc">Log out from application.</string>
    <string name="setting_detail_sound_desc">Play sound when receive new notification.</string>
    <string name="setting_detail_vibration_desc">Vibrate when receive new notification.</string>
    <string name="setting_filtering_desc">Filtering with specific word.</string>
    <string name="setting_advance_desc">Advanced setting about notification.</string>
    <string name="notification_content" formatted="false">I probably should have made it very clear about the grading policy. I remember talking about it in class but I kind of forgot the exact rule I stated. So here I clarify the grading policy (I think it is more or less same to what I stated in class, and I think at any case, it is a reasonable one).\n\n&#8211; Mid term: 25%\n&#8211; Hw 1: 10%\n&#8211; Hw 2&#8211;1: 10%\n&#8211; Hw 2&#8211;2: 20%\n&#8211; Hw 3: 20%\n&#8211; Hw 4: 15%\n&#8211; + alpha &#8211; quiz, regular revisions made to Balsamiq, class participation, etc.</string>
    <string name="setting_background_auto">Auto</string>
    <string name="setting_background_spring">Spring Theme</string>
    <string name="setting_background_summer">Summer Theme</string>
    <string name="setting_background_fall">Fall Theme</string>
    <string name="setting_background_winter">Winter Theme</string>
    <string name="setting_background_engineering">Engineering Campus Theme</string>
    <string name="setting_background_liberalart">Liberal Campus Theme</string>
    <string name="setting_background_cateogory">Theme Setting</string>
    <string name="setting_background">Setting Header Background</string>
    <string name="setting_background_desc">Setting header background theme</string>
    <string name="readall_message">Mark as read all in \'%s\'</string>
    <string name="message_starred_notification">10 important notifications</string>

</resources>