<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/setting_background" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/background_entries"
            android:entryValues="@array/background_values"
            android:key="background"
            android:summary="@string/setting_background_desc"
            android:title="@string/setting_background" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_alarm" >
        <RingtonePreference
            android:ringtoneType="notification"
            android:summary="@string/setting_notice_desc"
            android:title="@string/setting_sound" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settingVibration"
            android:summary="@string/setting_sound_desc"
            android:title="@string/setting_vibration" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_detail" >
        <com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference
            android:defaultValue="true"
            android:key="settingNotice"
            android:summary="@string/setting_notice_desc"
            android:title="@string/setting_notice" >
        </com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference>
        <com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference
            android:defaultValue="true"
            android:key="settingSchedule"
            android:summary="@string/setting_schedule_desc"
            android:title="@string/setting_schedule" >
        </com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference>
        <com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference
            android:key="settingSubject1"
            android:summary="@string/setting_hci_desc"
            android:title="@string/subject_hci" >
        </com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference>
        <com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference
            android:key="@string/setting_history_desc"
            android:summary="@string/setting_probability_desc"
            android:title="@string/subject_probability" >
        </com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference>
        <com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference
            android:key="settingSubject3"
            android:summary="@string/setting_history_desc"
            android:title="@string/subject_history" >
        </com.eincs.android.kupid.widget.CheckBoxAndSettingsPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_account" >
        <Preference
            android:key="logoutSetting"
            android:summary="@string/setting_logout_desc"
            android:title="@string/setting_logout" />
    </PreferenceCategory>

</PreferenceScreen>