<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_real_all"
        android:icon="@drawable/ic_action_done"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_read_all"/>
    <item
        android:id="@+id/action_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_lecture_info"
        android:icon="@drawable/ic_action_user"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_lecture_info"/>

</menu>