<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tutorial_1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity" >

    <EditText
        android:id="@+id/login_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_id"
        android:inputType="text"
        android:shadowColor="#555555"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="3.0"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_pw"
        android:inputType="textPassword"
        android:shadowColor="#555555"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="3.0"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:shadowColor="#555555"
        android:shadowDx="1.0"
        android:shadowDy=".0"
        android:shadowRadius="3.0"
        android:text="@string/login_login"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

</LinearLayout>