<com.handmark.pulltorefresh.library.PullToRefreshScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContentActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grading Policy "
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_title"
                android:text="2013년 11월 24일 일요일 오전 12:10" />

            <LinearLayout
                android:id="@+id/content_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_time"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/content_tag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:background="@android:color/darker_gray"
                    android:lines="1"
                    android:padding="2dp"
                    android:text="공지사항"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/content_tag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:background="@android:color/darker_gray"
                    android:lines="1"
                    android:padding="2dp"
                    android:text="11/23까지"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/content_tag3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:background="@android:color/darker_gray"
                    android:lines="1"
                    android:padding="2dp"
                    android:text="올린사람"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_tags"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/notification_content"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/card"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/content_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_export_calendar"
                android:ellipsize="none"
                android:gravity="center"
                android:text="@string/action_export_calendar"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/content_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_export_app"
                android:ellipsize="none"
                android:gravity="center"
                android:text="@string/action_export_text"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/content_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_view_original"
                android:ellipsize="none"
                android:gravity="center"
                android:text="@string/action_view_original"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</com.handmark.pulltorefresh.library.PullToRefreshScrollView>